brain/sources/prod-metadata/objects/Question_Bank__c/Question_Bank__c.object-meta.xml
<CustomObject>
    <label>Question Bank</label>
    <nameField>
        <displayFormat>QB-{00000}</displayFormat>
        <label>Question Bank  ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Banks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>