brain/sources/prod-metadata/objects/Question_Bank__c/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEPRECATED 2026-05-17. Interview type context comes from the linked Section. No longer used by any flow. Do not use.</description>
    <inlineHelpText>DEPRECATED - do not use.</inlineHelpText>
    <label>Interview Type (DEPRECATED - do not use)</label>
    <referenceTo>Interview_Type__c</referenceTo>
    <relationshipLabel>Question Banks</relationshipLabel>
    <relationshipName>Question_Banks</relationshipName>
    <type>Lookup</type>
</CustomField>