brain/sources/prod-metadata/objects/Question_Bank__c/fields/Niche__c.field-meta.xml
<CustomField>
    <fullName>Niche__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEPRECATED 2026-05-17. Question Bank no longer filters by Niche; niche-specific questions come from Lambda (AI Resume Based sections). No longer used by any flow. Do not use.</description>
    <inlineHelpText>DEPRECATED - do not use.</inlineHelpText>
    <label>Niche (DEPRECATED - do not use)</label>
    <referenceTo>Niche__c</referenceTo>
    <relationshipLabel>Question Banks</relationshipLabel>
    <relationshipName>Question_Banks</relationshipName>
    <type>Lookup</type>
</CustomField>