brain/sources/prod-metadata/objects/Question_Bank__c/fields/Notebook_Link__c.field-meta.xml
<CustomField>
    <fullName>Notebook_Link__c</fullName>
    <label>Notebook Link</label>
    <type>Url</type>
</CustomField>