brain/sources/prod-metadata/objects/Question_Bank__c/fields/Question_Hash__c.field-meta.xml
<CustomField>
    <fullName>Question_Hash__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>SHA-256 of the normalized question text. Unique - the org-level duplicate lock. Stamped by QuestionCsvLoader.</description>
    <externalId>true</externalId>
    <label>Question Hash</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>