brain/sources/prod-metadata/objects/Question_Bank__c/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <label>Scenario</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>