brain/sources/prod-metadata/objects/Question_Bank__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Question Banks</relationshipLabel>
    <relationshipName>Question_Banks</relationshipName>
    <type>Lookup</type>
</CustomField>