brain/sources/prod-metadata/objects/Question_Bank__c/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <description>Auto-derived from the Section lookup (Section__r.Name). Converted from a manual Text field to a Formula on 2026-05-17.</description>
    <formula>Section__r.Name</formula>
    <label>Section Name</label>
    <type>Text</type>
</CustomField>